Adding new experience and featured goals

--- a/index.html
+++ b/index.html
@@ -229,16 +229,29 @@
         <ul>
         	<li>
             <div class="date">March 2022 - Present</div>
-            <div class="info">
+            <div class="info">              
+              <p></p>
+              <p></p>
+              <p></p>
               <p class="semi-bold">.Net Developer - Arroyo Consulting</p>
-              <p>-Lead and build the architecture in .Net from scratch and apply design patterns such as repository and unit of work</p>
-              <p>-Make architectural decisions to keep code clean and perform well.</p>
-              <p>-Build middlewares and filters such as Authentication, Authorization and global exception handler.</p>
-              <p>-Integrate multiple projects into a single solution through RESTful.</p>
+              <p>-Take requirements from client and QA team.</p>
+              <p>-Create new API's. and fix bugs</p>
+              <p>-Collaborate with Frontend, Backend, QA, and Devops team.</p>
+              <p>-Code review from others .Net developers.</p>
+              <p>-Integrate the main app with external API's to make business decisions.</p>
+              <p>-Working with web jobs to keep the same information between two different databases.</p>
+              <p>-Create and improve stored procedures and query performance.</p>
               <p>-Carry out unit tests with Xunit to guarantee quality coverage of the project.</p>
-              <p>-Dockerize applications in .Net to upload them to the Azure cloud.</p>
-              <p>-Participate by sharing my knowledge through technical talks for the backend team in the company.</p>
-            </div>
+              <p class="semi-bold">Featured achivements</p>
+              <p>-I gave technical talks in order to share the knowledge with the Backend team in the company. 
+                Some of my technical talks:</p>
+              <p><a href="https://www.youtube.com/watch?v=G41_0ZBp4Mo">When to use StringBuilder and their performance</a></p>
+              <p><a href="https://www.youtube.com/watch?v=_Bw46uN3xvM">Validations in .NET (FluentValidation)</a></p>
+              <p>-I made architectural decisions following the SOLID principles in order to decouple and cohesionate the modules.</p>
+              <p>-I built middlewares and filters such as Authentication, Authorization with JWT and global exception handler.</p>
+              <p>-I created a repository design pattern from scratch using reflection and ADO.Net as ORM in order to help the backend team to persist with the database easily.</p>
+              <p>-I participated conducting technicals interviews to the new Backends candidates in the company, in order to verify their knowledge in different topics like OOP, C#, .Net, Design patterns, SQL, Scrum, Azure and Git. 
+              </p>
           </li>
           <li>
             <div class="date">July 2021 - March 2022</div>
