Adding profile information

--- a/index.html
+++ b/index.html
@@ -220,7 +220,9 @@
         <div class="title">
           <p class="bold">Profile</p>
         </div>
-        <p>I am a passionate Backend, working with various design patterns such as Solid, Unit of Work, Repository, Singleton, Builder, Dependency Injection and architectures, I worked with My Sql, Sql Server, PostgreSQL, .Net, C#, Python, Restful API's, JWT, Entity Framework, Ado.Net, Linq, Dapper, Automapper, Swagger, Git, Docker, Azure, Container Registry. I love to interact with the community and exchange knowledge</p>
+        <p>I am a passionate Backend, working with various design patterns such as Repository, Unit of work and Dependency Injection, following the SOLID principles and clean code.
+           I worked with My Sql, Sql Server, PostgreSQL, .Net, C#, Python, Restful API's, JWT, Entity Framework, Ado.Net, Dapper, Linq, FluentValidation, Automapper, Xunit, middlewares, filters, Git, Docker and some Azure modules. I'm familiar with scrum and I can work as a team member. 
+           I love to interact with the community and exchange knowledge</p>
       </div>
       <div class="resume_item resume_work">
         <div class="title">
