--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="resume_content">
         <div class="resume_item resume_info">
           <div class="title">
-            <p class="bold">JUAN CAMILO URREGO SERNA</p>
+            <p class="bold-name">JUAN CAMILO URREGO SERNA</p>
             <p class="regular">Software engineer - Backend</p>
           </div>
           <ul>
@@ -78,9 +78,11 @@
           </div>
           <ul>
             <li>
-              <div class="skill_name">
-                C#
-              </div>
+            <div class="skill_name">
+              C#
+            </div>
+          </li>
+            <li>
               <div class="skill_progress">
                 <span style="width: 90%;"></span>
               </div>
@@ -90,6 +92,8 @@
               <div class="skill_name">
                 .Net 5/6 (Core 3.1)
               </div>
+            </li>
+            <li>
               <div class="skill_progress">
                 <span style="width: 80%;"></span>
               </div>
@@ -99,6 +103,8 @@
               <div class="skill_name">
                 Entity Framework
               </div>
+            </li>
+            <li>
               <div class="skill_progress">
                 <span style="width: 90%;"></span>
               </div>
@@ -108,6 +114,8 @@
               <div class="skill_name">
                 SQL
               </div>
+            </li>
+            <li>
               <div class="skill_progress">
                 <span style="width: 90%;"></span>
               </div>
@@ -117,6 +125,8 @@
               <div class="skill_name">
                 Xunit
               </div>
+            </li>
+            <li>
               <div class="skill_progress">
                 <span style="width: 70%;"></span>
               </div>
@@ -126,6 +136,8 @@
               <div class="skill_name">
                 Git
               </div>
+            </li>
+            <li>
               <div class="skill_progress">
                 <span style="width: 90%;"></span>
               </div>
@@ -135,6 +147,8 @@
               <div class="skill_name">
                 Azure (In progress to be a pro)
               </div>
+            </li>
+            <li>
               <div class="skill_progress">
                 <span style="width: 35%;"></span>
               </div>
@@ -188,6 +202,8 @@
               <div class="skill_name">
                 Spanish Native
               </div>
+            </li>
+            <li>
               <div class="skill_progress">
                 <span style="width: 100%;"></span>
               </div>
@@ -197,6 +213,8 @@
               <div class="skill_name">
                 Portuguese C1
               </div>
+            </li>
+            <li>
               <div class="skill_progress">
                 <span style="width: 90%;"></span>
               </div>
@@ -206,6 +224,8 @@
               <div class="skill_name">
                 English B2
               </div>
+            </li>
+            <li>
               <div class="skill_progress">
                 <span style="width: 70%;"></span>
               </div>
