Adding new information like tech talks and backend skills

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
         <div class="resume_item resume_skills">
           <div class="title">
-            <p class="bold">BACKEND TECHNICAL KNOWLEDGE</p>
+            <p class="bold">BACKEND</p>
           </div>
           <ul>
             <li>
@@ -83,76 +83,54 @@
             </div>
           </li>
             <li>
-              <div class="skill_progress">
-                <span style="width: 90%;"></span>
+              <div class="skill_name">
+                .NET 5, .NET 6, .NET 7
               </div>
-              <div class="skill_per">90%</div>
             </li>
             <li>
               <div class="skill_name">
-                .Net 5/6 (Core 3.1)
+                Entity Framework, Dapper, Ado
               </div>
-            </li>
-            <li>
-              <div class="skill_progress">
-                <span style="width: 80%;"></span>
-              </div>
-              <div class="skill_per">80%</div>
             </li>
             <li>
               <div class="skill_name">
-                Entity Framework
+                SQL Server, MySql, PostgreSQL 
               </div>
-            </li>
-            <li>
-              <div class="skill_progress">
-                <span style="width: 90%;"></span>
-              </div>
-              <div class="skill_per">90%</div>
             </li>
             <li>
               <div class="skill_name">
-                SQL
+                FluentValidation, Automapper
               </div>
-            </li>
-            <li>
-              <div class="skill_progress">
-                <span style="width: 90%;"></span>
-              </div>
-              <div class="skill_per">90%</div>
             </li>
             <li>
               <div class="skill_name">
-                Xunit
+                MongoDB, Cosmos DB, Azure Data Storage
               </div>
-            </li>
-            <li>
-              <div class="skill_progress">
-                <span style="width: 70%;"></span>
-              </div>
-              <div class="skill_per">70%</div>
             </li>
             <li>
               <div class="skill_name">
-                Git
+                JWT (Authorization, Authentication, Refresh Token), Rate limiting, Global exception handler, Swagger
               </div>
-            </li>
-            <li>
-              <div class="skill_progress">
-                <span style="width: 90%;"></span>
-              </div>
-              <div class="skill_per">90%</div>
             </li>
             <li>
               <div class="skill_name">
-                Azure (In progress to be a pro)
+                Nunit, XUnit
               </div>
             </li>
             <li>
-              <div class="skill_progress">
-                <span style="width: 35%;"></span>
+              <div class="skill_name">
+                Azure cloud
               </div>
-              <div class="skill_per">35%</div>
+            </li>
+            <li>
+              <div class="skill_name">
+                Agile, Scrum
+              </div>
+            </li>
+            <li>
+              <div class="skill_name">
+                Git, Sourcetree
+              </div>
             </li>
           </ul>
         </div>
@@ -227,9 +205,26 @@
             </li>
             <li>
               <div class="skill_progress">
-                <span style="width: 70%;"></span>
+                <span style="width: 75%;"></span>
               </div>
-              <div class="skill_per">70%</div>
+              <div class="skill_per">75%</div>
+            </li>
+          </ul>
+        </div>
+        <div class="resume_item resume_skills">
+          <div class="title">
+            <p class="bold">Tech Talks</p>
+          </div>
+          <ul>
+            <li>
+              <div class="skill_name">
+                Stringbuilder and their performance: https://youtu.be/G41_0ZBp4Mo
+              </div>
+            </li>
+            <li>
+              <div class="skill_name">
+                Validations in .Net Core: https://youtu.be/_Bw46uN3xvM
+              </div>
             </li>
           </ul>
         </div>
@@ -240,9 +235,7 @@
         <div class="title">
           <p class="bold">Profile</p>
         </div>
-        <p>I am a passionate Backend, working with various design patterns such as Repository, Unit of work and Dependency Injection, following the SOLID principles and clean code.
-           I worked with My Sql, Sql Server, PostgreSQL, .Net, C#, Python, Restful API's, JWT, Entity Framework, Ado.Net, Dapper, Linq, FluentValidation, Automapper, Xunit, middlewares, filters, Git, Docker and some Azure modules. I'm familiar with scrum and I can work as a team member. 
-           I love to interact with the community and exchange knowledge</p>
+        <p>I am a passionate and highly skilled .NET developer with experience in delivering robust and scalable applications. Primarily focused on .NET and Azure, my priority lies in designing and implementing clean code while applying best practices. I stay updated with the latest trends and techniques to ensure efficient and high-performing solutions. Additionally, I enjoy sharing knowledge through technical talks and have a short-term goal of becoming a software architect.</p>
       </div>
       <div class="resume_item resume_work">
         <div class="title">
@@ -339,9 +332,8 @@
         <ul>
           <li><i class="fas fa-skating"></i>Inline-skating</li>
           <li><i class="fas fa-chess"></i>Chess</li>
-          <li><i class="fas fa-bicycle"></i>Cycling</li>
+          <li><i class="fas fa-code"></i>Programming</li>
           <li><i class="fas fa-camera"></i>Photography</li>
-          <li><i class="fas fa-hiking"></i>Hiking</li>
         </ul>
       </div>
     </div>
