--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
             </li>
             <li>
               <div class="skill_name">
-                FluentValidation, Automapper
+                MongoDB, Cosmos DB, Azure Data Storage
               </div>
             </li>
             <li>
               <div class="skill_name">
-                MongoDB, Cosmos DB, Azure Data Storage
+                FluentValidation, Automapper
               </div>
             </li>
             <li>
@@ -114,7 +114,7 @@
             </li>
             <li>
               <div class="skill_name">
-                Nunit, XUnit
+                Nunit, XUnit, Moq, NSubitute
               </div>
             </li>
             <li>
