--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <ul>
             <li>
             <div class="skill_name">
-              C#
+              C#, Javascript
             </div>
           </li>
             <li>
@@ -114,7 +114,7 @@
             </li>
             <li>
               <div class="skill_name">
-                Nunit, XUnit, Moq, NSubitute
+                NUnit, XUnit, Moq, NSubitute
               </div>
             </li>
             <li>
