Adding new information: Python and Linq

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <ul>
             <li>
             <div class="skill_name">
-              C#, Javascript
+              C#, Javascript, Python
             </div>
           </li>
             <li>
@@ -104,7 +104,7 @@
             </li>
             <li>
               <div class="skill_name">
-                FluentValidation, Automapper
+                Linq, FluentValidation, Automapper
               </div>
             </li>
             <li>
