Adding new experiencie; Arkeero

--- a/index.html
+++ b/index.html
@@ -242,8 +242,22 @@
           <p class="bold">Work experience</p>
         </div>
         <ul>
+          <li>
+            <div class="date">October 2023 - Actual</div>
+            <div class="info">              
+              <p class="semi-bold">.Net Architect - Arkeero</p>
+              <p class="semi-bold">Lead the strategic technical direction, architecture design, and effective implementation of a multi-tenant SaaS platform. This solution integrates a robust monolithic core with an array of microservices, using .NET 8, PostgreSQL, MongoDB, React, and AWS</p>
+              <p>-Define the architecture and select appropriate technologies to meet project requirements.</p>
+              <p>-Lead a multidisciplinary team consisting of Backend, Frontend, UI/UX, and DevOps specialists.</p>
+              <p>-Create and manage tasks for all team members, ensuring progress tracking.</p>
+              <p>-Conduct daily stand-up meetings to update the board and discuss next steps.</p>
+              <p>-Review pull requests and ensure that the code meets the standards established in architecture and performance.</p>
+              <p>-Design and implement design patterns, middlewares, and Backend-related tasks.</p>
+              <p>-Perform unit tests using Xunit to ensure comprehensive project quality coverage.</p>
+              <p>-Conduct interviews to assess candidates' alignment with company standards and project requirements.</p>
+          </li>
         	<li>
-            <div class="date">March 2022 - Present</div>
+            <div class="date">March 2022 - December 2023</div>
             <div class="info">              
               <p class="semi-bold">.Net Developer - Arroyo Consulting</p>
               <p>-Take requirements from client and QA team.</p>
