Fixing icons and deleting hobbies

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Resume/CV Design</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 </head>
@@ -84,7 +85,7 @@
           </li>
             <li>
               <div class="skill_name">
-                .NET 5, .NET 6, .NET 7
+                .NET 5, .NET 6, .NET 7, .NET 8
               </div>
             </li>
             <li>
@@ -119,7 +120,7 @@
             </li>
             <li>
               <div class="skill_name">
-                Azure cloud
+                Azure, AWS
               </div>
             </li>
             <li>
@@ -246,7 +247,7 @@
             <div class="date">October 2023 - Actual</div>
             <div class="info">              
               <p class="semi-bold">.Net Architect - Arkeero</p>
-              <p class="semi-bold">Lead the strategic technical direction, architecture design, and effective implementation of a multi-tenant SaaS platform. This solution integrates a robust monolithic core with an array of microservices, using .NET 8, PostgreSQL, MongoDB, React, and AWS</p>
+              <p class="semi-bold-description">Lead the strategic technical direction, architecture design, and effective implementation of a multi-tenant SaaS platform. This solution integrates a robust monolithic core with an array of microservices, using .NET 8, PostgreSQL, MongoDB, React, and AWS</p>
               <p>-Define the architecture and select appropriate technologies to meet project requirements.</p>
               <p>-Lead a multidisciplinary team consisting of Backend, Frontend, UI/UX, and DevOps specialists.</p>
               <p>-Create and manage tasks for all team members, ensuring progress tracking.</p>
@@ -260,15 +261,15 @@
             <div class="date">March 2022 - December 2023</div>
             <div class="info">              
               <p class="semi-bold">.Net Developer - Arroyo Consulting</p>
-              <p>-Take requirements from client and QA team.</p>
-              <p>-Create new API's. and fix bugs</p>
+              <p>-Take requirements from client</p>
+              <p>-Create new API's and fix bugs</p>
               <p>-Collaborate with Frontend, Backend, QA, and Devops team.</p>
               <p>-Code review from others .Net developers.</p>
               <p>-Integrate the main app with external API's to make business decisions.</p>
               <p>-Working with web jobs to keep the same information between two different databases.</p>
               <p>-Create and improve stored procedures and query performance.</p>
               <p>-Carry out unit tests with Xunit to guarantee quality coverage of the project.</p>
-              <p class="semi-bold">Featured achivements</p>
+              <p class="semi-bold-description">Featured achivements</p>
               <p>-I gave technical talks in order to share the knowledge with the Backend team in the company. 
                 Some of my technical talks:</p>
               <p><a href="https://www.youtube.com/watch?v=G41_0ZBp4Mo">When to use StringBuilder and their performance</a></p>
@@ -332,27 +333,14 @@
           <li>
             <div class="date">2020</div>
             <div class="info">
-              <p class="semi-bold">Ingeniería de Software</p>
-              <p>Ingeniero de Software - Universidad de Medellín</p>
+              <p class="semi-bold">Software Engineering</p>
+              <p>Software engineer - Universidad de Medellín</p>
             </div>
           </li>
 
         </ul>
       </div>
-      <div class="resume_item resume_hobby">
-        <div class="title">
-          <p class="bold">Hobby</p>
-        </div>
-        <ul>
-          <li><i class="fas fa-skating"></i>Inline-skating</li>
-          <li><i class="fas fa-chess"></i>Chess</li>
-          <li><i class="fas fa-code"></i>Programming</li>
-          <li><i class="fas fa-camera"></i>Photography</li>
-        </ul>
-      </div>
     </div>
   </div>
-
 </body>
-
 </html>
