--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
                 <i class="fas fa-map-signs"></i>
               </div>
               </a>
-              <a href="https://goo.gl/maps/Ernj9orQM5LoRpqbA">
               <div class="data">
-                Tricentenario, Medellín<br/> COLOMBIA
+                Medellín<br/> COLOMBIA
               </div>
               </a>
             </li>
